--- a/styles.css
+++ b/styles.css
@@ -202,6 +202,79 @@ body {
   }
 }
 
+/* Donate Button */
+.donateus {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 12px 10px 15px;
+  box-shadow: rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  background-color: #e8e8e8;
+  border-color: #ffe2e2;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 35px;
+  font-size: 20px;
+  font-weight: 600;
+  color: rgb(134, 124, 124);
+  font-family: cursive;
+  transition: transform 400ms cubic-bezier(.68,-0.55,.27,2.5), 
+  border-color 400ms ease-in-out,
+  background-color 400ms ease-in-out;
+}
+
+.donateus:hover {
+  background-color: #eee;
+  transform: scale(105%);
+}
+
+.donateus svg {
+  fill: rgb(255, 110, 110);
+  margin-left: 13px;
+  animation: beatingHeart 1.2s infinite;
+  margin-left: 3px;
+  margin-bottom: 3px;
+}
+
+@keyframes beatingHeart {
+  0% {
+    transform: scale(1);
+  }
+
+  15% {
+    transform: scale(1.15);
+  }
+
+  30% {
+    transform: scale(1);
+  }
+
+  45% {
+    transform: scale(1.15);
+  }
+
+  60% {
+    transform: scale(1);
+  }
+}
+
+.donateus:hover svg {
+  transform: scale(105%);
+  border-color: #ffd8d8;
+}
+
+@media (max-width: 768px) {
+  .donateus {
+    padding: 7px 10px;
+    font-size: 18px;
+  }
+
+  .donateus svg {
+    height: 25px;
+    width: 20px;
+  }
+}
+
 /* Navbar Styles */
 .navbar {
   position: fixed;
